test: 로그인 시 화면 이동
id, pw 입력하고 로그인 버튼 누르면 /hello로 일단 이동함 페이지나 mapping 주소는 나중에 변경 예정
package 폴더 추가, examcontroller 추가(삭제예정 필요X), LoginController 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,6 +34,7 @@
             border-radius: 5px;
         }
         .login button {
+            margin: 5px;
             padding: 10px;
             background-color: #7dcdfe;
             color: white;
@@ -42,17 +43,18 @@
             cursor: pointer;
         }
         .login button:hover {
-            background-color: #4cae4c;
+            background-color: #18A1ED;
         }
     </style>
 </head>
 <body>
 <div class="wrapper">
     <h1>티켓 히어로</h1>
-    <form class="login">
+    <form class="login" action="/login" method="post">
         <input type="text" name="ID" placeholder="아이디" required>
         <input type="password" name="password" placeholder="비밀번호" required>
         <button type="submit">로그인</button>
+        <button type="submit">회원가입</button>
     </form>
 </div>
 </body>
